sfSandBoxCode/force-app/main/default/objects/Employee_Vaccination__c/Employee_Vaccination__c.object-meta.xml
<CustomObject>
    <label>Employee Vaccination</label>
    <nameField>
        <displayFormat>EV-{00000000}</displayFormat>
        <label>Vaccination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Vaccinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>