sfSandBoxCode/force-app/main/default/objects/Employee_Vaccination__c/fields/Dose__c.field-meta.xml
<CustomField>
    <fullName>Dose__c</fullName>
    <label>Dose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Booster Vaccine</fullName>
            </value>
            <value>
                <fullName>Lifetime Vaccine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>