sfSandBoxCode/force-app/main/default/objects/Employee_Vaccination__c/fields/Vaccination__c.field-meta.xml
<CustomField>
    <fullName>Vaccination__c</fullName>
    <label>Vaccination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cholera</fullName>
            </value>
            <value>
                <fullName>Hepatitis A</fullName>
            </value>
            <value>
                <fullName>Hepatitis B</fullName>
            </value>
            <value>
                <fullName>Polio</fullName>
            </value>
            <value>
                <fullName>Tetanus</fullName>
            </value>
            <value>
                <fullName>Typhoid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>